--- a/styles/place.css
+++ b/styles/place.css
@@ -143,6 +143,11 @@ footer {
         margin-right: 20px;
         background-color: rgba(255, 255, 255, 0.60);
     }
+
+    .weather-icon img::after{
+        width: 100px;
+    }
+
      img {
         margin: 0;
         padding: 0;
